@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    id("application")
 }
 
 group = "gcla"
@@ -7,6 +8,11 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+}
+
+application {
+    mainClass = "lazySerde.Main"
+    applicationDefaultJvmArgs = listOf("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 dependencies {
@@ -19,8 +25,14 @@ dependencies {
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
     implementation("com.fasterxml.jackson.core:jackson-core:2.18.3")
     implementation("cglib:cglib:3.3.0") // CGLIB dependency
+    // https://mvnrepository.com/artifact/org.objenesis/objenesis
+    implementation("org.objenesis:objenesis:3.4")
 }
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs = listOf(
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    )
 }
